# RealsenseTracker

./: .gitignore  CMakeLists.txt  structure.txt
include/rs_tracker/: align.hpp  align_gicp.hpp  align_icp.hpp  common.hpp  data_source.hpp  data_source_rs.hpp  fpfh.hpp  gicp_cost.hpp  photometric_cost.hpp  point_cloud_utils.hpp  rs_driver.hpp  rs_viewer.hpp
rs_tracker/: CMakeLists.txt
rs_tracker/align/: CMakeLists.txt
rs_tracker/align/include/rs_tracker/align/: align_gicp.hpp  align_icp.hpp  jet_extras.hpp  photometric_cost.hpp  sample.hpp  teaser_interface.hpp
rs_tracker/align/src/: align_gicp.cpp  align_icp.cpp  teaser_interface.cpp
rs_tracker/app/: CMakeLists.txt
rs_tracker/app/src/: basic_capture.cpp  rs_align_app.cpp  rs_replay_app.cpp  rs_tracker.cpp  rs_viewer_app.cpp
rs_tracker/common/: CMakeLists.txt  types.hpp
rs_tracker/common/include/rs_tracker/: common.hpp
rs_tracker/common/include/rs_tracker/common/: fpfh.hpp  kdtree.hpp  point_cloud_utils.hpp  types.hpp
rs_tracker/common/src/: fpfh.cpp  point_cloud_utils.cpp
rs_tracker/driver/: CMakeLists.txt
rs_tracker/driver/include/rs_tracker/driver/: data_source_rs.hpp
rs_tracker/driver/src/: data_source_rs.cpp  rs_driver.cpp
rs_tracker/vis/: CMakeLists.txt
rs_tracker/vis/src/: rs_viewer.cpp
src/: align.cpp  align_gicp.cpp  align_icp.cpp  data_source_rs.cpp  fpfh.cpp  point_cloud_utils.cpp  rs_align_app.cpp  rs_driver.cpp  rs_replay_app.cpp  rs_tracker.cpp  rs_viewer.cpp  rs_viewer_app.cpp  view_xyzrgb.cpp
